# src/interface/http/controllers/file.controller.ts
@@ -12,26 +12,31 @@ import {
 
 import { IHttpErrorDto } from '@shared/values/errors/error.dto';
 
-import { IFileUploadReq } from '@app/file/dtos/file-upload/file-upload.dto';
+import {
+  IFileUploadDto,
+  IFileUploadReq,
+} from '@app/file/dtos/file-upload/file-upload.dto';
 
 import middlewares from '@infra/ioc/middlewares/http';
-import { createFileUploadUseCase } from '@infra/ioc/usecases/file';
+import { preSignUploadsUseCase } from '@infra/ioc/usecases/file';
 
 @Route('files')
 @Tags('File')
 export class FileController extends Controller {
   /**
-   * Create a direct-to-Blackblaze file upload instruction
+   * Pre-sign direct-to-Blackblaze upload instructions
    */
   @Post('/upload')
-  @OperationId('createFileUpload')
+  @OperationId('preSignUploads')
   @SuccessResponse('200')
   @Response<IHttpErrorDto>('400')
   @Response<IHttpErrorDto>('401')
   @Response<IHttpErrorDto>('422')
   @Response<IHttpErrorDto>('500')
   @Middlewares(middlewares.isAuthenticatedUser)
-  public async createFileUpload(@Body() body: IFileUploadReq) {
-    return await createFileUploadUseCase(body);
+  public async preSignUploads(
+    @Body() body: IFileUploadReq[]
+  ): Promise<IFileUploadDto[]> {
+    return await preSignUploadsUseCase(body);
   }
 }
